syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

//Controller
// The greeting service definition.
service Greeter {
  //Method service
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}


//Object Models

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
